<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistraionActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_4sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:gravity="center"
                        android:text="SIGN UP"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp">

                        <EditText
                            android:id="@+id/etRegistraionFullNameId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:imeOptions="actionNext"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp">

                        <EditText
                            android:id="@+id/etRegistraionNameId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:imeOptions="actionNext"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/etRegistraionPasswordId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/etRegistraionConfirmPassId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight=".4" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4sdp"
                            android:layout_weight=".6"
                            android:padding="@dimen/_4sdp">

                            <EditText
                                android:id="@+id/etRegistraionContactId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Contact Number"
                                android:inputType="number"
                                android:imeOptions="actionNext"
                                android:maxLength="11"
                                 />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp">

                        <EditText
                            android:id="@+id/etRegistraionDobId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="DOB"
                            android:imeOptions="actionNext"
                            android:inputType="date" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:padding="@dimen/_4sdp">

                        <EditText
                            android:id="@+id/etRegistraionEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_id"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/txtRegSignInId"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_45sdp"
                        android:background="@color/btn_bg"
                        android:gravity="center"
                        android:padding="@dimen/_8sdp"
                        android:text="SIGN IN"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal" />

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>

        <TextView
            android:id="@+id/txtRegistrationSignInId"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/btn_bg"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="ALREADY REGISTERED? SIGNIN HERE"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />
    </android.support.v7.widget.CardView>

</RelativeLayout>